# mcp-weather

./: .gitignore  README.md  main.py  pyproject.toml
server/: weather.py
